description in events for the request, getting too much line spacing after changing the base font to 10 px solved done

--- a/src/styles/_addEvent.scss
+++ b/src/styles/_addEvent.scss
@@ -130,3 +130,7 @@ textarea:focus {
   opacity: 1;
   font-weight: 500;
 }
+
+.margin_bottom0 {
+  margin-bottom: 0px;
+}
